tests/snapshots/examples_fixtures/type_system__failing__09_compile_typed_call_return_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/09_compile_typed_call_return_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The value of `n` does not match its type annotation.

  --> examples/type_system/failing/09_compile_typed_call_return_mismatch.flx:5:14
  |
5 | let n: Int = make_label()
  |              ^^^^^^^^^^^^
  |              ------------ this is `String`
  |        --- but `n` was annotated as `Int`

Help:
  Change `n` to a `Int` value or update the annotation to `String`.
== stdout ==
<not executed>
